[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/godot_db_manager/assets/tex/gui.png" type="Texture" id=1]
[ext_resource path="res://addons/godot_db_manager/table_property.gd" type="Script" id=2]
[ext_resource path="res://addons/godot_db_manager/assets/fnt/roboto_18.tres" type="DynamicFont" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 54, 2, 24, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 54, 54, 24, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 54, 28, 24, 24 )

[node name="table_property" type="Control"]
anchor_right = 1.0
margin_bottom = 15.36
rect_min_size = Vector2( 900, 32 )
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 32.0 ],
"_edit_use_anchors_": true
}

[node name="delete_button" type="TextureButton" parent="."]
margin_left = 3.0
margin_top = 4.0
margin_right = 27.0
margin_bottom = 28.0
texture_normal = SubResource( 1 )
texture_pressed = SubResource( 2 )
texture_hover = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="prop_name_label" type="Label" parent="."]
margin_left = 28.0
margin_top = 2.0
margin_right = 97.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 3 )
text = "    Name:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="prop_name" type="LineEdit" parent="."]
margin_left = 109.0
margin_right = 409.0
margin_bottom = 32.0
rect_min_size = Vector2( 300, 0 )
custom_fonts/font = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="type_label" type="Label" parent="."]
margin_left = 413.0
margin_top = 2.0
margin_right = 473.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 3 )
text = "    Type:"

[node name="prop_type" type="OptionButton" parent="."]
margin_left = 485.0
margin_right = 735.0
margin_bottom = 32.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = ExtResource( 3 )
text = "Bool"
items = [ "Bool", null, false, 0, null, "Integer", null, false, 1, null, "Float", null, false, 2, null, "String", null, false, 3, null, "Resource", null, false, 4, null ]
selected = 0

[node name="autoincrement_btn" type="CheckBox" parent="."]
visible = false
margin_left = 740.0
margin_right = 891.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 3 )
text = "Auto increment"
__meta__ = {
"_edit_use_anchors_": false
}
